progres commit to check a bug on IOS

--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,4 @@
-body {
+.home {
   text-align: center;
   color: white;
   font-family: 'Inconsolata',Consolas, monaco, monospace;
@@ -133,18 +133,17 @@ right: 16px;
   width: 0px;
   visibility: hidden;
   transition: 0.5s;
+  grid-column-start: 1;
+  grid-column-end: span 2;
 }
 
 .info:hover ~ .infoData  {
   visibility: visible;
+  white-space: nowrap;
+  overflow: hidden;
   width: 100%;
   height:  calc(8px + 1.3vmin );
   
-}
-
-.info:hover ~ .infoData  {
-  white-space: nowrap;
-  overflow: hidden;
 }
 
 .info:hover ~ .infoData span {
@@ -155,10 +154,99 @@ right: 16px;
 }
 
 .infoData span {
-  padding-left: 120%;
+  padding-left: 120%; 
 }
 
 @keyframes marquee {
   0%   { transform: translate(0, 0); }
   100% { transform: translate(-100%, 0); }
+}
+
+embed {
+  width: 100%;
+  height: 100%;
+}
+
+#modalOverlay {
+  background-color: rgba(0, 0, 0, 0.66);
+  position: absolute;
+  top: 0;
+  left: 0;
+  height: 100vh;
+  width: 100vw;
+
+  transition: 0.3s;
+  visibility: hidden;
+}
+
+.modal {
+
+  /* transition: heigth, 0.3s, ease; */
+  
+  transition: 0.2s, ease, 0.2s;
+
+
+
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+
+  height: 0vh;
+  width: 80vw;
+  min-width: 301px;
+  overflow: hidden;
+  z-index: 10;
+
+
+  border: 2px solid white;
+    box-shadow: 0 0 60px 0 rgba(0, 0, 0, 0.66);
+
+
+  visibility: hidden;
+}
+
+.div {
+  /* visibility: hidden; */
+  background-color: black;
+  padding: 15px;
+}
+
+.modalHeader {
+  font-size: 1.4em;
+}
+
+.smallerText {
+  font-size: 0.85em;
+}
+
+#multimediaModal{
+  display: grid;
+  grid-template-rows: auto, 15px, auto;
+  text-align: center;
+  color: white;
+  font-family: 'Inconsolata',Consolas, monaco, monospace;
+}
+
+#multimediaModal span {
+  grid-row: 2;
+}
+
+#contactModal {
+  text-align: center;
+  color: white;
+  font-family: 'Inconsolata',Consolas, monaco, monospace;
+}
+
+strong {
+  color: orangered;
+  font-weight: 300;
+}
+
+strong:hover {
+  text-decoration: underline;
+}
+
+i:hover{
+  color: orangered;
 }
